monorepo setup with example app

--- a/example/app.json
+++ b/example/app.json
@@ -1,22 +1,17 @@
 {
   "name": "react-native-core-example",
-  "displayName": "Core Example",
+  "displayName": "React-Native-Core Example",
   "expo": {
     "name": "react-native-core-example",
     "slug": "react-native-core-example",
     "description": "Example app for react-native-core",
     "privacy": "public",
-    "version": "1.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "version": "0.1.0",
+    "platforms": ["ios", "android"],
     "ios": {
       "supportsTablet": true
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"],
+    "entryPoint": "index.js"
   }
 }
