--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "extends": "../tsconfig",
   "references": [{ "path": "../packages/utils" }],
-  "compilerOptions": {},
-  "exclude": ["lib"]
+  "compilerOptions": {}
 }
