--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "@romerorickyio/react-native-core",
   "version": "0.1.0",
   "description": "react native core",
   "private": true,
@@ -33,26 +32,21 @@
     "url": "https://github.com/romerorickyio/react-native-core/issues"
   },
   "homepage": "https://github.com/romerorickyio/react-native-core#readme",
+  "dependencies": {
+    "react": "16.13.1"
+  },
   "devDependencies": {
-    "@commitlint/config-conventional": "^11.0.0",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@release-it/conventional-changelog": "^2.0.0",
+    "@babel/core": "^7.17.9",
     "@types/jest": "^26.0.0",
-    "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
-    "commitlint": "^11.0.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^6.0.0",
     "jest": "^26.0.1",
     "lerna": "^4.0.0",
+    "metro-react-native-babel-preset": "^0.70.0",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-builder-bob": "^0.18.2",
-    "release-it": "^14.2.2",
     "typescript": "^4.1.3"
   },
   "jest": {
