--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.43",
-    "react": "^18.0.0",
+    "react": "16.13.1",
     "react-native-builder-bob": "^0.18.2",
     "typescript": "^4.6.3"
   }
