--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-native-core/utils",
+  "name": "@romerorickyio/react-native-core-utils",
   "version": "0.1.1",
   "description": "react native core utils",
   "main": "lib/commonjs/index.js",
