--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-core/utils": "^0.1.1",
+    "@romerorickyio/react-native-core-utils": "*",
     "expo": "^42.0.0",
     "expo-splash-screen": "~0.11.2",
     "react": "16.13.1",
